// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectMembersArea.vue empty search result area render correctly 1`] = `
<div class="team-area">
  <div class="team-area__header">
    <headerarea-stub headerstate="0" selectedprojectmemberscount="0"></headerarea-stub>
  </div>
  <!---->
  <div class="team-area__empty-search-result-area">
    <h1 class="team-area__empty-search-result-area__title">No results found</h1>
    <emptysearchresulticon-stub class="team-area__empty-search-result-area__image"></emptysearchresulticon-stub>
  </div>
  <!---->
</div>
`;

exports[`ProjectMembersArea.vue renders correctly 1`] = `
<div class="team-area">
  <div class="team-area__header">
    <headerarea-stub headerstate="0" selectedprojectmemberscount="0"></headerarea-stub>
  </div>
  <!---->
  <!---->
  <v-table-stub items-label="project members" selectable="true" limit="6" total-page-count="1" total-items-count="1" on-page-click-callback="function () { [native code] }" class="team-area__table"></v-table-stub>
</div>
`;

exports[`ProjectMembersArea.vue team area renders correctly 1`] = `
<div class="team-area">
  <div class="team-area__header">
    <headerarea-stub headerstate="0" selectedprojectmemberscount="0"></headerarea-stub>
  </div>
  <!---->
  <!---->
  <v-table-stub items-label="project members" selectable="true" limit="6" total-page-count="1" total-items-count="1" on-page-click-callback="function () { [native code] }" class="team-area__table"></v-table-stub>
</div>
`;
